Add sequence retrieval prototype
